Modified notifications, and alt+tab switcher

--- a/gtk-2.0/xfce-notify.rc
+++ b/gtk-2.0/xfce-notify.rc
@@ -2,18 +2,18 @@ gtk-color-scheme = "selected_bg_color:#5294E2\nselected_fg_color:#ffffff"
 
 style "notify-window" {
   XfceNotifyWindow::summary-bold = 1
-  XfceNotifyWindow::border-color = "#17191F"
-  XfceNotifyWindow::border-color-hover = "#17191F"
+  XfceNotifyWindow::border-color = "#C3C3C3"
+  XfceNotifyWindow::border-color-hover = "#C3C3C3"
   XfceNotifyWindow::border-radius = 3.0
   XfceNotifyWindow::border-width = 1.0
   XfceNotifyWindow::border-width-hover = 1.0
 
-  bg[NORMAL] = "#292C36"
+  bg[NORMAL] = "#EFF0F1"
 }
 
 style "notify-button" {
-  bg[NORMAL] = "#434652"
-  bg[PRELIGHT] = "#5C6070"
+  bg[NORMAL] = "#C4C4C4"
+  bg[PRELIGHT] = "#A2A2A2"
   bg[ACTIVE] = @selected_bg_color
 
   fg[NORMAL] = "#BAC3CF"
@@ -31,9 +31,9 @@ style "notify-button" {
 style "notify-text" {
   GtkWidget::link-color = @selected_bg_color
 
-  fg[NORMAL] = "#BAC3CF"
-  fg[PRELIGHT] = "#BAC3CF"
-  fg[ACTIVE] = "#BAC3CF"
+  fg[NORMAL] = "#343434"
+  fg[PRELIGHT] = "#343434"
+  fg[ACTIVE] = "#343434"
 
   engine "murrine" {
     textstyle = 0
@@ -52,7 +52,7 @@ style "notify-progressbar" {
 
   fg[PRELIGHT] = "#000000"
   bg[NORMAL]   = @selected_bg_color
-  bg[ACTIVE] = "#1D1F26"
+  bg[ACTIVE] = "#CCCCCC"
   bg[SELECTED] = @selected_bg_color
 
   engine "murrine" {
